# mira-network

./: .gitignore  README.md  SETUP.md  guardian-repository.yml  package-lock.json  todo.md
.github/: dependabot.yml
.guardian/: node-service.yml  playground.yml  router.yml
cli/: Makefile  go.mod  go.sum  main.go  r.csv  result.csv
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  FEATURES.md  PROVIDERS.md  QUICKSTART.md  README.md  SUPPORT.md  plan.md
inference-bridge/: README.md  package.json
inference-logs/: Dockerfile  README.md  docker-compose.yml  env.example  package-lock.json  package.json
inference-logs-rs/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
inference-logs-rs/src/: config.rs  main.rs  models.rs
inference-logs-rs/src/routes/: webhook.rs
inference-logs-rs/src/services/: batch_accumulator.rs  blockchain.rs  mod.rs
k6-tests/: README.md  main.ts  package.json
mira-console/: .env.example  index.html  package.json  tailwind.config.js  vite.config.ts
mobile-frontend/: .gitignore  README.md  app.json  package.json
node-service/: Dockerfile  guardian-manifest.yml  package-lock.json  package.json  tsconfig.json
playground/: .prettierrc.json  README.md  eslint.config.mjs  example.env  package-lock.json  package.json
playground_v2/: .prettierrc.json  example.env  next.config.ts  package.json  tailwind.config.ts
router/: .env.example  .gitignore  Dockerfile  README.md  database.db  docker-compose.yml  guardian-manifest.yml  pyproject.toml  supported-models.json  test.db
router-cf/: .env.example  .gitignore  README.md  alchemy.run.ts  drizzle.config.ts  package.json  test-gateway.ts  test-models.ts  tsconfig.json
router/.cursor/rules/: python.mdc
router/migrations/: env.py
router/migrations/versions/: 0ddbf4f95feb_add_supported_models_to_machines.py  147f00d0919b_threads.py  2337eba1ff88_auto_credit.py  2d60b177bb63_initial_migrations.py  3182b5f9abe0_ttfs_to_apilog.py  3754158bba54_add_variables_list.py  41f46405db51_wallet_table_fix.py  47fe3196a859_local.py  493837a3f007_machine_token_created_at_default_value.py  62885eaebef6_merge_branches.py  62e3abf11bf8_handle_machine_tokens.py  6813c02bd742_initial_migration.py  71fb79bd3089_add_index_to_usercredithistory.py  76361c5b2f95_remove_uniqueness_on_flow_name.py  7a5160124373_threads_msg_relation_fix.py  7f3f85959d24_add_traffic_weight.py  828ec7299bbd_add_user_id_to_flows_table.py  854651b513e0_threads_msg_relation_fix.py  9124da4a1c30_auto_credit_system.py  9546f6a628e7_drop_machine_uid.py  9c5687096422_new_user_table_and_merge_customclaim_to_.py  9d6c46c7776e_wallet_user_id_relation_fix.py  a216eb44cd59_add_fields_to_machine.py  a2f9d39fbdb5_wallet_table_fix.py  add_service_access_token.py  b1e9f3d335d7_system_settings.py  b40096408f78_wallet_user_id_type.py  b444557df1e6_merge_user_credits_to_users_table_and_.py  b6428177f4af_threads_msg_relation_fix.py  bbe0e549299d_meta_data_col_for_api_keys.py  bf671128ab6b_api_key_id_in_api_logs_table.py  c0c259ae256c_threads_msg_relation_fix.py  c59be83638c6_flow_support.py  cd1271ee6f54_threads_metadata_name_fix.py  daafefc85a9b_apilogs_model_update_to_support_pricing.py  f69bace5a14b_wallet.py  f7b3074be5ba_wallet_user_id.py  web3_auth_tables.py
router/src/mira_client_dashboard/: db.py  main.py  models.py  redis_client.py
router/src/mira_client_dashboard/api/admin/: __init__.py  credits.py  users.py
router/src/mira_client_dashboard/api/v1/: __init__.py  credits.py  flows.py  logs.py  machines.py  network.py  proxy.py  tokens.py
router/src/mira_client_dashboard/core/: config.py  security.py  types.py
router/src/mira_client_dashboard/db/: base.py  session.py
router/src/mira_client_dashboard/models/: __init__.py  base.py  credits.py  flows.py  logs.py  machines.py  tokens.py  user.py
router/src/mira_client_dashboard/schemas/: ai.py  credits.py
router/src/mira_client_dashboard/utils/: helpers.py  network.py  redis.py
router/src/router/: main.py
router/src/router/api/admin/: __init__.py  machines.py  settings.py  users.py
router/src/router/api/v1/: __init__.py  captcha.py  credits.py  flows.py  grafana.py  logs.py  machines.py  metrics.py  network.py  proxy.py  thread.py  tokens.py  users.py  wallet.py  web3_auth.py
router/src/router/api/v1/docs/: flows.py  network.py
router/src/router/core/: config.py  security.py  settings_types.py  types.py  web3_auth.py
router/src/router/db/: base.py  session.py
router/src/router/models/: __init__.py  credit_trigger.py  flows.py  logs.py  machine_tokens.py  machines.py  system_settings.py  thread.py  tokens.py  user.py  wallet.py  web3_auth.py
router/src/router/schemas/: ai.py  captcha.py  flows.py  machine.py  tokens.py  wallet.py
router/src/router/services/: credit_listener.py  credit_notifier.py
router/src/router/utils/: cache.py  db.py  debugging.py  litellm.py  logger.py  machine.py  metrics.py  network.py  nr.py  opensearch.py  redis.py  s3.py  settings.py  turnstile.py  user.py
router/tests/: test_db.py
router/tests/credits/: test_credits.py
router/tests/flows/: test_flows.py
router/tests/logs/: test_logs.py
router/tests/machines/: test_machines.py
router/tests/network/: test_chat.py  test_health.py  test_machines.py  test_models.py  test_network.py  test_proxy.py
router/tests/proxy/: test_proxy.py
router/tests/tokens/: test_tokens.py
sdk/: README.md  app.py  pyproject.toml  pytest.ini
sdk-node/: README.md  package-lock.json  package.json  (+1 more)
sdk/src/mira_network/: __init__.py  client.py  models.py  sync_client.py
sdk/tests/: test_client.py
sdk/tests/client/: test_client.py
service/: .gitignore  Dockerfile  README.md  config.py  consensus_store.py  deploy.py  eval.py  machine_registry.py  main.py  newrelic.ini  prompt_store.json  pyproject.toml  requirements.txt
service/app/: main.py
service/app/api/v1/: chat.py  eval.py  health.py  models.py
service/app/core/: config.py
service/app/models/: chat.py  eval.py
service/app/services/: eval.py  llm.py
try-sdk/: .pdm-python  main.py  pyproject.toml
(+420 files in other folders)
