[package]
name = "inference-logs-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dotenvy = "0.15.7"
ethers = "2.0.14"
flate2 = "1.1.2"
hex = "0.4.3"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
sha3 = "0.10.8"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["limit", "compression-br", "compression-gzip", "decompression-gzip"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
