[project]
name = "mira-client-dashboard"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Hamid Raza", email = "contact@hamidraza.com"},
]
dependencies = ["fastapi>=0.115.5", "uvicorn>=0.32.1", "sqlmodel>=0.0.22", "redis>=5.2.0", "httpx>=0.27.2", "requests>=2.32.3", "prometheus-fastapi-instrumentator>=7.0.0", "supabase>=2.10.0", "newrelic", "psycopg2-binary>=2.9.10", "PyJWT>=2.10.1", "scalar-fastapi>=1.0.3", "alembic>=1.14.0"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
_.env_file = ".env"
dev = "uvicorn src.router.main:app --host 0.0.0.0 --reload"
prod = "newrelic-admin run-python -m uvicorn src.router.main:app --host 0.0.0.0"
migration-generate = "alembic revision --autogenerate -m"
migration-upgrade = "alembic upgrade head"
