[project]
name = "service"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Hamid Raza", email = "contact@hamidraza.com"},
]
dependencies = [
    "fastapi==0.115.2",
    "openai==1.51.2",
    "uvicorn==0.34.0",
    "requests==2.32.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
_.env_file = ".env"
dev = "uvicorn main:app --reload --host 0.0.0.0 --port 34523"
prod = "uvicorn main:app --host 0.0.0.0 --port 8000"
