[project]
name = "service"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Hamid Raza", email = "contact@hamidraza.com"},
]
dependencies = [
    "fastapi==0.115.8",
    "openai==1.61.0",
    "uvicorn==0.34.0",
    "requests==2.32.3",
    "tenacity>=9.0.0",
    "newrelic>=10.7.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
_.env_file = ".env"
dev = "uvicorn main:app --reload --host 0.0.0.0 --port 34523"
prod = "newrelic-admin run-python -m uvicorn main:app --host 0.0.0.0 --port 80"
